testing title change

--- a/examples/clm_camera.html
+++ b/examples/clm_camera.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Face tracker</title>
+		<title>Face tracker - Meir's version</title>
 		<meta charset="utf-8">
 		<link href="./styles/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<style>
