--- a/parser-test.html
+++ b/parser-test.html
@@ -3,6 +3,56 @@
 	<!-- <script src="./parser.js"></script> -->
 	<script>
 		var points = [[1,2],[3,4],[5,6],[7,8],[9,10]];
+		function max(){
+			if(arguments.length === 0) {
+				return undefined
+			} else if(arguments.length === 1) {
+				if(Array.isArray(arguments[0])){
+					return Math.max.apply(null, arguments[0]);
+				} else {
+					return arguments[0];
+				}
+			} else {
+				return Math.max.apply(null, arguments);
+			}
+		}
+
+		function min(){
+			if(arguments.length === 0) {
+				return undefined
+			} else if(arguments.length === 1) {
+				if(Array.isArray(arguments[0])){
+					return Math.min.apply(null, arguments[0]);
+				} else {
+					return arguments[0];
+				}
+			} else {
+				return Math.min.apply(null, arguments);
+			}
+		}
+
+		function avg(){
+			if(arguments.length === 0) {
+				return undefined
+			} else if(arguments.length === 1) {
+				if(Array.isArray(arguments[0])){
+					return arguments[0].reduce(
+						function(prev, current){
+							return (prev + current);
+						}
+					) / arguments[0].length ;
+				} else {
+					return arguments[0];
+				}
+			} else {
+				var sum = 0;
+				for(var i = 0 ; i < arguments.length ; i++){
+					sum += arguments[i];
+				}
+				return (sum/arguments.length);
+			}
+		}
+
 		function xVal(){
 			if(arguments.length === 0) {
 				return undefined;
@@ -16,9 +66,16 @@
 				return result;
 			}
 		}
-		console.log(xVal());
-		console.log(xVal(2));
+		// console.log(xVal());
+		// console.log(xVal(2));
 		console.log(xVal(1,3,4));
+		console.log(eval('min(xVal(1,3,4))'));
+		console.log(eval('max(2,4,8)'));
+		console.log(eval('max([2,4,8])'));
+		console.log('avg1 ', eval('avg()'));
+		console.log(eval('avg(1,2,4)'));
+		console.log(eval('avg([1,2,4])'));
+		console.log(eval('avg(1)'));
 		xVal(1,2,3);
 		// var expr = Parser.parse("indof(x,2)");
 		// console.log( expr.evaluate({x:[1,2,4,8]})) ;
