--- a/parser-test.html
+++ b/parser-test.html
@@ -53,6 +53,34 @@
 			}
 		}
 
+		function xyVal(){
+			if(arguments.length === 0) {
+				return undefined;
+			} else if(arguments.length === 1){
+				return points[arguments[0]];
+			} else {
+				var result = [];
+				for(var i = 0 ; i < arguments.length ; i++){
+					result.push(points[arguments[i]]);
+				};
+				return result;
+			}
+		}
+
+		function yVal(){
+			if(arguments.length === 0) {
+				return undefined;
+			} else if(arguments.length === 1){
+				return points[arguments[0]][1];
+			} else {
+				var result = [];
+				for(var i = 0 ; i < arguments.length ; i++){
+					result.push(points[arguments[i]][1]);
+				};
+				return result;
+			}
+		}
+
 		function xVal(){
 			if(arguments.length === 0) {
 				return undefined;
